--- a/css/theme-workshop.css
+++ b/css/theme-workshop.css
@@ -27,6 +27,12 @@ body {
   color: var(--MAIN-TEXT-color) !important;
 }
 
+.image-up {
+    width: 60%;
+    max-width: 600px;
+    height: 530px;
+}
+
 textarea:focus,
 input[type="email"]:focus,
 input[type="number"]:focus,
