--- a/css/theme.css
+++ b/css/theme.css
@@ -506,6 +506,9 @@ select[multiple="multiple"]:focus {
   margin: 3rem auto;
   display: block;
   text-align: center;
+    width: 60%;
+    max-width: 600px;
+    height: 530px;
 }
 
 #body img.border,
